--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "homepage": "https://github.com/exponentjs/ex-navigator#readme",
   "dependencies": {
-    "@exponent/react-native-responsive-image": "0.0.4",
+    "@exponent/react-native-responsive-image": "^1.0.0",
     "invariant": "^2.2.0",
     "react-clone-referenced-element": "^1.0.1"
   }
